[package]
name = "sled"
version = "0.1.0"
edition = "2021"
description = "Stupid Line EDitor"
license = "Unlicense"
repository = "https://github.com/Johan-Mi/sled"
keywords = ["cli", "terminal", "text", "file", "editor"]
categories = ["command-line-utilities", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = "1.6.0"
