[package]
name = "sled"
version = "0.1.0"
edition = "2021"
description = "Stupid Line EDitor"
license = "Unlicense"
repository = "https://github.com/Johan-Mi/sled"
keywords = ["cli", "terminal", "text", "file", "editor"]
categories = ["command-line-utilities", "text-editors"]

[features]
color = ["dep:owo-colors", "owo-colors?/supports-colors"]

[dependencies]
owo-colors = { version = "3.5.0", optional = true }
ropey = "1.6.0"
